<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/general_gap"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/display_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_gap"
        android:layout_marginEnd="@dimen/general_gap"
        android:layout_marginBottom="@dimen/general_gap"
        android:fontFamily="monospace"
        android:text="@string/tittle_app"
        android:textColor="@color/black"
        android:textSize="@dimen/display_medium_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        tools:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/general_gap"
        android:hint="@string/hint_name"
        app:boxStrokeColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="@+id/display_textView"
        app:layout_constraintStart_toStartOf="@+id/display_textView"
        app:layout_constraintTop_toBottomOf="@+id/display_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/general_gap"
        android:hint="@string/hint_email"
        app:boxStrokeColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_name"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField_name"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField_cellphone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/general_gap"
        android:hint="@string/hint_cellphone_number"
        app:boxStrokeColor="@color/main_color"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_email"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField_email"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/medium_gap"
        android:backgroundTint="@color/button_color"
        android:text="@string/save_btnText"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/small_gap"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextField_cellphone"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextField_cellphone"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField_cellphone"
        tools:cornerRadius="8dp" />




</androidx.constraintlayout.widget.ConstraintLayout>